--- a/crowdin.yaml
+++ b/crowdin.yaml
@@ -3,8 +3,7 @@ api_key_env: CROWDIN_DOCUSAURUS_API_KEY
 base_path: ./
 preserve_hierarchy: true
 files:
-  - source: /
+  - source: /docs/*md
     translation: /website/translated_docs/%locale%/%original_file_name%
   - source: /website/i18n/en.json
     translation: /website/i18n/%locale%.json
-    languages_mapping: []
